--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -298,7 +298,7 @@ body.dark-theme {
     }
   }
 
-  .thumbnail, app-viewer .image-expand {
+  .thumbnail, .image-expand, video, .embed-expand, .qr-expand {
     filter: drop-shadow(0px 0px 0.5px #ffffff);
   }
 
